--- a/app/views/contexts/edit.html.erb
+++ b/app/views/contexts/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing context</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @context %> |
-<%= link_to 'Back', contexts_path %>
+<%- model_class = ::Context -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human %></h1>
+</div>
+<%= render :partial => 'form' %>
