--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -1,36 +1,19 @@
-<%- model_class = ::Context -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-</div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @contexts.each do |context| %>
-      <tr>
-        <td><%= link_to context.id, context_path(context) %></td>
-        <td><%= context.name %></td>
-        <td><%=l context.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_context_path(context), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      context_path(context),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="page-header"><h1><%=t '.title', :default => "Contexts" %></h1></div>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_context_path,
-            :class => 'btn btn-primary' %>
+<% @contexts.each do |context| %>
+  <div class = "row">
+    <div class = "span12">
+      <%= link_to edit_context_path(context) do %>
+        <i class="icon-pencil"></i>
+      <% end %>
+      <%= link_to context_path(context), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) } do %>
+        <i class="icon-remove"></i>
+      <% end %>
+      <%= context.name %>
+    </div>
+  </div>
+<% end %>
+
+<%= link_to new_context_path, style: "" do %>
+  <i class="icon-plus" style="font-size: 30px; margin-top: 20px; margin-bottom: 20px;"></i>
+<% end %>
