Adding some left padding to add context.

--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -6,6 +6,6 @@
 
 <%= link_to new_context_path, :class => "row" do %>
   <div class="span12" style="border: 1px dashed #ddd; color: #ddd;">
-    <i class="icon-plus" style="font-size: 30px; margin-top: 10px; margin-bottom: 10px;"> add new context</i>
+    <i class="icon-plus" style="font-size: 30px; margin-top: 10px; margin-bottom: 10px; padding-left: 10px;"> add new context</i>
   </div>
 <% end %>
