Change styles to classes, defined in less stylesheet.

--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <%= link_to new_context_path, :class => "row" do %>
-  <div class="span12" style="border: 1px dashed #ddd; color: #ddd;">
-    <i class="icon-plus" style="font-size: 30px; margin-top: 10px; margin-bottom: 10px; padding-left: 10px;"> add new context</i>
+  <div class="span12 faded-button">
+    <i class="icon-plus large"> add new context</i>
   </div>
 <% end %>
