--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,8 +1,18 @@
 @import "twitter/bootstrap/bootstrap";
 
-body { padding-top: 40px; }
-
 @import "twitter/bootstrap/responsive";
+
+@media (min-width: 980px) {
+  body {
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 979px) {
+  .navbar-fixed-top {
+    margin-bottom: 0px;
+  }
+}
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings.png");
