Unbox page h1 to reduce spacing on small displays.

--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="page-header"><h1>Contexts</h1></div>
+<h1>Contexts</h1>
 
 <% @contexts.each do |context| %>
   <%= render partial: "context", locals: {context: context} %>
