--- a/app/views/contexts/_context.html.erb
+++ b/app/views/contexts/_context.html.erb
@@ -1,10 +1,7 @@
 <div class = "row">
   <div class = "span12 well">
-    <%= context.name %>
+    <%= link_to context.name, edit_context_path(context), style: "color: black;" %>
     <div style="float:right">
-      <%= link_to edit_context_path(context) do %>
-        <i class="icon-pencil"></i>
-      <% end %>
       <%= link_to context, :method => :delete, :data => { :confirm => t('links.confirm') } do %>
         <i class="icon-remove"></i>
       <% end %>
