Remove separation between contexts and add new button.

--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -4,7 +4,7 @@
   <%= render partial: "context", locals: {context: context} %>
 <% end %>
 
-<%= link_to new_context_path, :class => "row" do %>
+<%= link_to new_context_path do %>
   <div class="span12 faded-button">
     <i class="icon-plus large"> add new context</i>
   </div>
