--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,8 @@
     <div class="container-fluid">
       <%= yield %>
 
+      <div class="clearfix"></div>
+
       <footer>
         <p>&copy; Attend 2013</p>
       </footer>
