Change default path of contexts on index to point at show, not edit.

--- a/app/views/contexts/_context.html.erb
+++ b/app/views/contexts/_context.html.erb
@@ -1,6 +1,6 @@
 <div class = "row">
   <div class = "span12 well">
-    <%= link_to context.name, edit_context_path(context), style: "color: black;" %>
+    <%= link_to context.name, context, style: "color: black;" %>
     <div style="float:right">
       <%= link_to context, :method => :delete, :data => { :confirm => t('links.confirm') } do %>
         <i class="icon-remove"></i>
