--- a/app/views/contexts/show.html.erb
+++ b/app/views/contexts/show.html.erb
@@ -3,10 +3,7 @@
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @context.name %></dd>
-</dl>
+<h1><%= @context.name %></h1>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
