--- a/app/views/contexts/show.html.erb
+++ b/app/views/contexts/show.html.erb
@@ -1,3 +1,3 @@
 <%= breadcrumbs t('nav.back') => contexts_path, @context.name => 1 %>
 
-<h1><%= best_in_place @context, :name, data: {"inner-class" => "editable-h1"} %></h1>
+<h1><%= best_in_place @context, :name %></h1>
