Defactor form partial in contexts.

--- a/app/views/contexts/show.html.erb
+++ b/app/views/contexts/show.html.erb
@@ -1,3 +1,7 @@
 <%= breadcrumbs t('nav.back') => contexts_path, @context.name => 1 %>
 
 <h1><%= best_in_place @context, :name %></h1>
+
+<div class="faded-button square-button">
+  <i class="icon-plus"></i><br/>add packing list
+</div>
