--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -65,3 +65,13 @@ h1 span.best_in_place {
   width: 100%;
   display: inline-block;
 }
+
+.square-button {
+  width: 160px;
+  height: 160px;
+  font-size: 40px;
+  line-height: 40px;
+  text-align: center;
+  margin: 5px;
+  float: left;
+}
