Add packables to packing lists.

--- a/app/views/packables/new.html.erb
+++ b/app/views/packables/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Packing List</h1>
+<h1>New Packable</h1>
 
 <%= form_for [@context, @packing_list, @packable], :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
